# biowatch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sealed-secrets-cert.pem
.github/workflows/: ci.yml  image.yml  promote-prod.yml
app/: __init__.py  main.py
app/api/: routes.py
app/bot/: handlers.py  main.py  parsing.py  sender.py  service.py
app/clients/: __init__.py  europe_pmc.py  pubmed.py
app/core/: config.py
app/events/: __init__.py  papers.py
app/jobs/: __init__.py  delivery.py  indexer_consumer.py  ingestion.py  outbox_publisher.py  queues.py  runtime.py  scheduler.py  summaries.py  summary_worker.py  worker.py
app/kafka/: __init__.py  consumer.py  producer.py
app/llm/: client.py
app/models/: __init__.py  digest.py  event_outbox.py  ingestion_run.py  paper.py  paper_summary.py  telegram_delivery.py  telegram_subscriber.py  topic.py
app/observability/: __init__.py  api.py  logging.py  metrics.py
app/schemas/: digests.py  papers.py  (+5 more)
docs/: prod-gitops.md
migrations/: README  env.py
scripts/: bootstrap-prod.sh  seal-prod-secret.sh  validate-helm-serviceaccounts.sh  validate-prod-promotion.sh
tests/: conftest.py  test_dashboard.py  test_digests.py  test_europe_pmc_client.py  test_health.py  test_indexer_consumer.py  test_ingestion_worker.py  test_observability.py  test_outbox.py  test_papers.py  test_search.py  test_subscriptions.py  test_summaries.py  test_telegram_bot.py  test_telegram_deliveries.py  test_telegram_subscribers.py  test_topics.py
(+94 files in other folders)
