[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "biowatch"
version = "0.1.0"
description = "Biomedical literature watcher for user-defined research topics."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "elasticsearch[async]>=8.15,<9",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "python-telegram-bot>=21,<23",
    "prometheus-client>=0.21",
    "redis>=5.0",
    "rq>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20",
    "pytest>=8.2",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
